need to add timer

--- a/click.html
+++ b/click.html
@@ -17,15 +17,15 @@
 	
 	<div class="row">
 		<div class="col-sm-12">
-			<p>Ore: <span id="ore">0</span></p>
-			<p>Diamonds: <span id="diamonds">0</span>$</p>
+			<p>Diamonds: <span id="diamond">0</span>$</p>
+			<p>Rate: <span id="rate">0</span>$</p>
+			<p>Inventory: <span id="inventory">0</span>$</p>
 		</div>
 	</div>
 	
 	<div class="row">
 		<div class="col-sm-12">
 			<button id="dig" type="button">Dig!</button>
-			<button id="smelt" type="button">Smelt!</button>
 		</div>
 	</div>
 	
@@ -43,8 +43,8 @@
 					<h4>Picaxe</h4>
 					<p>60$<br>
 					Digs +0.2/sec<br>
-					<button type="button" class="buy" value="picaxe">Buy</button>
-					<button id="sell-pic" type="button">Sell</button>
+					<button class="buy" value="picaxe" type="button" >Buy</button>
+					<button class="sell" value="picaxe" type="button">Sell</button>
 					</p>
 					
 					<h4>Torch</h4>
